# respan-example-projects

./: .gitignore  README.md
anthropic_agents_python_example/: .env.example
anthropic_agents_python_example/basic/: gateway_test.py  hello_world_test.py  tool_use_test.py
anthropic_agents_typescript_example/: .env.example  README.md  gateway_test.ts  package.json  tool_use_test.ts  wrapped_query_test.ts
api-tests/: utils.py
example_scripts/python/: pyproject.toml
example_workflows/demo_account_setup/: .env.example  create_log_scores.py  create_prompt.py
example_workflows/demo_account_setup_TS/: README.md  create_dataset.ts  create_prompt.ts  package.json  tsconfig.json
example_workflows/demo_account_setup_python/: create_evaluator.py
fullstack/vercel-ai-fastapi/: .env.local.example  .gitignore  README.md  next.config.js  package.json  pyproject.toml  requirements.txt
platform/: .env.example  evaluators.json  logs.json  pyproject.toml
platform/demo-setup-python/: .env.example  README.md  basic_logging.py  create_dataset.py  create_evaluator.py  create_log_scores.py  create_prompt.py  test_create_log_score.py
platform/demo-setup-typescript/: README.md  basic_logging.ts  create_dataset.ts  create_evaluator.ts  create_log_scores.ts  create_prompt.ts  env.template  package.json  test_create_log_score.ts
platform/experiments/: complete_completion_experiment_workflow.ipynb  complete_custom_experiment_workflow.ipynb
platform/multi-modal-evals/: README.md  agent.py  create_experiment_with_prompts.py  create_testset_from_logs.py  demo.ipynb  main.py  test_evaluator.py
platform/multi-modal-evals/constants/: __init__.py
platform/multi-modal-evals/evaluators/: __init__.py  evaluators.py
platform/multi-modal-evals/experiments/: __init__.py  create_experiment.py  experiments.py
platform/multi-modal-evals/logs/: __init__.py  logs.py
platform/multi-modal-evals/prompts/: __init__.py  prompts.py  traveling_agent_prompt.md
platform/multi-modal-evals/testsets/: __init__.py  testsets.py
python/tracing/anthropic-agents-sdk/: .env.example  README.md  __init__.py  complex_edge_cases_test.py  pyproject.toml
python/tracing/anthropic-agents-sdk/basic/: _sdk_runtime.py  gateway_test.py  hello_world_test.py  tool_use_test.py  wrapped_query_test.py
python/tracing/anthropic-agents-sdk/sessions/: multi_turn_test.py
python/tracing/anthropic-agents-sdk/streaming/: stream_messages_test.py
python/tracing/anthropic-agents-sdk/tools/: multi_tool_test.py  tool_use_test.py
python/tracing/braintrust/: 1_hello_world.py  2_gateway.py  3_tracing.py  4_respan_params.py  5_tool_use.py  README.md  pyproject.toml
python/tracing/claude-agent-sdk/: README.md  __init__.py  basic_platform_example.py  complex_edge_cases_test.py  pyproject.toml
python/tracing/crewai/: gateway.py  hello_world.py  multi_task.py  pyproject.toml  respan_params.py  tracing.py
python/tracing/dify/: .env.example  README.md  gateway.py  hello_world.py  pyproject.toml  respan_params.py  streaming.py  tracing.py
python/tracing/openai-agents-sdk/: complex_edge_cases_test.py  pyproject.toml
python/tracing/openai-agents-sdk/agent_patterns/: agents_as_tools_test.py  deterministic_test.py  input_guardrails_test.py  llm_as_a_judge_test.py  output_guardrails_test.py  parallelization_test.py  routing_test.py
python/tracing/openai-agents-sdk/basic/: dynamic_system_prompt_test.py  hello_world_test.py  lifecycle_with_hook_example_test.py  stream_items_test.py  stream_text_test.py
python/tracing/openai-agents-sdk/customer_service/: main_test.py
python/tracing/openai-agents-sdk/handoffs/: handsoff_test.py  message_filter_streaming_test.py  message_filter_test.py
python/tracing/openai-agents-sdk/research_bot/: main_test.py  manager.py
python/tracing/openai-agents-sdk/tools/: computer_use_test.py  file_search_test.py  functions_test.py  web_search_test.py
python/tracing/pydantic-ai/: .env.example  01_hello_world.py  01_hello_world_openinference.py  02_gateway.py  02_gateway_openinference.py  03_tracing.py  03_tracing_openinference.py  04_respan_params.py  04_respan_params_openinference.py  05_tool_use.py  05_tool_use_openinference.py  06_anthropic.py  06_anthropic_openinference.py  README.md  example.py  pyproject.toml  requirements.txt
python/tracing/respan-tracing-sdk/: README-scripts.md  README.md  __init__.py  anthropic_complex_edge_cases_test.py  anthropic_openinference_example.py  basic_usage.py  claude_agent_sdk_complex_edge_cases_test.py  claude_agent_sdk_openinference_example.py  crewai_openinference_example.py  env.example  env.template  langchain_openinference_example.py  multi_llm_provider.py  multi_processor.py  pyproject.toml  span_operations.py
python/tracing/respan-tracing-sdk/basic/: crewai_sequential_openinference_example.py  pirate_joke_anthropic_openinference_example.py  pirate_joke_tracing_example.py  trace_updating_example.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/: .env.example  README.md  pyproject.toml
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/agent_patterns/: agents_as_tools.py  deterministic_flow.py  parallelization.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/basic/: hello_world.py  streaming.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/guardrails/: input_guardrails.py  output_guardrails.py  tool_guardrails.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/handoffs/: basic_handoff.py  handoff_with_context.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/human_in_the_loop/: approval_flow.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/sessions/: persistent_memory.py
python/tracing/respan-tracing-sdk/integrations/openai-agents-sdk/tools/: function_tools.py  mcp_server.py  web_search.py
python/tracing/respan-tracing-sdk/logs-to-trace/: .env.example  README.md  main.py  trace_logs.json  utils.py
python/tracing/respan-tracing-sdk/logs-to-trace-otlp/: README.md  main.py  trace_spans.json  utils.py
(+363 files in other folders)
