[tool.poetry]
name = "anthropic-agents-python-example"
version = "0.1.0"
description = "Example scripts for Respan + Anthropic Agent SDK integration"
authors = ["Respan <team@respan.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
claude-agent-sdk = ">=0.1.0"
respan-exporter-anthropic-agents = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
