[tool.poetry]
name = "claude-agent-sdk-python-example"
version = "0.1.0"
description = "Claude Agent SDK tracing examples using local Respan packages"
authors = ["Respan <team@respan.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = "^1.0.0"
claude-agent-sdk = ">=0.1.58"
respan-ai = {path = "../../../../respan/python-sdks/respan", develop = true}
respan-instrumentation-claude-agent-sdk = {path = "../../../../respan/python-sdks/instrumentations/respan-instrumentation-claude-agent-sdk", develop = true}
respan-tracing = {path = "../../../../respan/python-sdks/respan-tracing", develop = true}
respan-sdk = {path = "../../../../respan/python-sdks/respan-sdk", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
