[tool.poetry]
name = "dify-tracing-example"
version = "0.1.0"
description = "Poetry environment for Dify AI tracing examples"
authors = ["Cursor <cursor@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dify-client-python = "^1.0.1"
respan-sdk = { path = "/home/yuyang/KeywordsAI/respan/python-sdks/respan-sdk", develop = true }
respan-tracing = { path = "/home/yuyang/KeywordsAI/respan/python-sdks/respan-tracing", develop = true }
respan-exporter-dify = { path = "/home/yuyang/KeywordsAI/respan/python-sdks/respan-exporter-dify", develop = true }
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
