[tool.poetry]
name = "openai-agents-python-example"
version = "0.1.0"
description = ""
authors = ["Raymond Huang <raymond@keywordsai.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
keywordsai-exporter-openai-agents = "^0.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
