[tool.poetry]
name = "openai-agents-python-example"
version = "0.1.0"
description = ""
authors = ["Raymond Huang <raymond@respan.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.2.2"
pydantic = "^2.12.5"
openai = "^2.29.0"
openai-agents = "^0.13.0"
respan-ai = {path = "/home/yuyang/KeywordsAI/respan/python-sdks/respan", develop = true}
respan-instrumentation-openai-agents = {path = "/home/yuyang/KeywordsAI/respan/python-sdks/instrumentations/respan-instrumentation-openai-agents", develop = true}
respan-tracing = {path = "/home/yuyang/KeywordsAI/respan/python-sdks/respan-tracing", develop = true}
opentelemetry-semantic-conventions-ai = "0.4.1"
openinference-semantic-conventions = "^0.1.28"
respan-sdk = {path = "/home/yuyang/KeywordsAI/respan/python-sdks/respan-sdk", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
