[tool.poetry]
name = "openai-agents-respan-tracing"
version = "0.1.0"
description = "OpenAI Agents SDK examples traced with respan-tracing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openai-agents = "*"
respan-tracing = "*"
python-dotenv = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
